<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termId"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/terminalIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/note_list_text"
        android:textColorLink="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/merchantId"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/merchantIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/note_list_text"
        android:textColorLink="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank_code"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/bankCodeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/note_list_text"
        android:textColorLink="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ptsp_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/ptspIdTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/note_list_text"
        android:textColorLink="@android:color/holo_orange_dark" />

</LinearLayout>
